Avance en la implementación de select con funcionalidad CRUD | Modularizando la clase para que sea aplicable a cualquier otro módulo.

--- a/views/configuration-panel/productos-admin.html
+++ b/views/configuration-panel/productos-admin.html
@@ -7,7 +7,8 @@
         </button>
     </div>
     <div class="search-bar">
-        <input id="search-bar" type="text" placeholder="Buscar productos..." onkeydown="checkEmpty(event, 7)" oninput="checkEmpty(event, 7)">
+        <input id="search-bar" type="text" placeholder="Buscar productos..." onkeydown="checkEmpty(event, 7)"
+            oninput="checkEmpty(event, 7)">
     </div>
     <div class="filters">
         <select id="selectPageSize" onchange="filterTable(7)">
@@ -64,7 +65,7 @@
                 <select type="text" id="unidadMedicion" name="unidadMedicion" required>
                     <option value="Unidad">Unidad</option>
                     <option value="Kilogramo">Kilogramo</option>
-                    <option value="Gramo">Gramo</option>   
+                    <option value="Gramo">Gramo</option>
                     <option value="Litro">Litro</option>
                     <option value="Mililitro">Mililitro</option>
                     <option value="Onza">Onza</option>
