--- a/public/CSS/dashboard-css/module-seletor.css
+++ b/public/CSS/dashboard-css/module-seletor.css
@@ -4,12 +4,14 @@
 #module-container {
     position: relative;
     width: 300px;
+    display: flex;
 }
 
 /* -------------------------------------- */
 /* ▼ SIMULACIÓN DE SELECT ▼ */
 /* -------------------------------------- */
 #selected-module {
+    width: 200px;
     padding: 8px 12px;
     background: #fff;
     cursor: pointer;
@@ -148,4 +150,72 @@
     font-weight: bold;
     margin-left: 10px;
     cursor: pointer;
+}
+
+#add-module-btn {
+    margin-left: 4px;
+    font-size: 22px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    background: #f0f0f0;
+    cursor: pointer;
+    vertical-align: middle;
+}
+
+#add-module-btn:hover {
+    background-color: #e0e0e0;
+}
+
+/* Popup */
+.popup-overlay {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    z-index: 1000;
+    justify-content: center;
+    align-items: self-start;
+}
+
+.popup-content {
+    background: white;
+    padding: 20px;
+    border-radius: 10px;
+    width: 300px;
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
+    text-align: center;
+}
+
+.popup-content input {
+    width: 90%;
+    padding: 8px;
+    margin-top: 10px;
+    margin-bottom: 6px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+
+.popup-buttons {
+    display: flex;
+    padding-left: 5px;
+    gap: 4px;
+}
+
+.popup-buttons button {
+    padding: 6px 12px;
+    cursor: pointer;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+
+.popup-buttons button#save-module {
+    background-color: #28a745;
+    color: white;
+}
+
+.popup-buttons button#cancel-module {
+    background-color: #ccc;
 }
