--- a/views/salida-producto/crear-salida.html
+++ b/views/salida-producto/crear-salida.html
@@ -275,3 +275,8 @@
         </div>
     </div>
 </form>
+<script>
+    document.addEventListener('DOMContentLoaded', () => {
+        llenarSelectsColaboradores();
+    });
+</script>
