Bug Fixes CRUD Select

--- a/views/configuration-panel/productos-admin.html
+++ b/views/configuration-panel/productos-admin.html
@@ -92,8 +92,8 @@
 
                         <input type="text" id="new-module-name" placeholder="Nombre del módulo" />
                         <div class="popup-buttons">
-                            <button id="save-module">Guardar</button>
-                            <button id="cancel-module">Cancelar</button>
+                            <button id="save-module" type="button">Guardar</button>
+                            <button id="cancel-module" type="button">Cancelar</button>
                         </div>
                     </div>
                 </div>
