20/04/2025 Registrar salida de productos lista
Finalmente la funcionalidad de registrar la salida de los productos ha quedado completa

--- a/views/salida-producto/crear-salida.html
+++ b/views/salida-producto/crear-salida.html
@@ -92,7 +92,7 @@
 <div class="d-flex justify-content-between align-items-center mb-4">
     <h1 id="output-title">Registrar Nueva Salida</h1>
     <div class="btn-group no-print">
-        <button class="btn btn-secondary" onclick="validarYRecolectarDatosSalidaProducto(true)">
+        <button class="btn btn-secondary" onclick="validarYRecolectarDatosNuevaSalidaProducto()">
             <i class="material-icons">save</i> Guardar
         </button>
         <button class="btn btn-outline-primary" onclick="adjuntarHTML('/salida-producto/salida-admin.html', cargarSalidasTabla)">
