--- a/views/salida-producto/editar-salida.html
+++ b/views/salida-producto/editar-salida.html
@@ -195,6 +195,7 @@
                         <div class="info-label">Registrado por:</div>
                         <div class="info-value">
                             <div class="readonly-value" id="nombreUsuarioRegistro"></div>
+                            <input type="hidden" id="idUsuario">
                         </div>
                     </div>
                 </div>
