Arreglo de fallo al desplegar el form de crear producto

--- a/views/configuration-panel/productos-admin.html
+++ b/views/configuration-panel/productos-admin.html
@@ -3,7 +3,7 @@
 <div class="main-content">
     <div class="content-header">
         <h1 class="content-title">Administrar Productos</h1>
-        <button onclick="agregarProducto()" class="add-product-btn" title="Agregar Nuevo Producto">
+        <button onclick="desplegarAgregarProducto()" class="add-product-btn" title="Agregar Nuevo Producto">
             <span class="material-icons">add_circle</span>
         </button>
     </div>
