21/04/2025 listado de los puestos de trabajo

--- a/views/configuration-panel/configuration-panel.html
+++ b/views/configuration-panel/configuration-panel.html
@@ -34,7 +34,7 @@
             <h2 class="config-title">Administrar proveedores</h2>
             <p class="config-description">Gestiona la información y los registros de los proveedores.</p>
         </div>
-        <div class="config-card">
+        <div class="config-card"  onclick="adjuntarHTML('/configuration-panel/puestro-trabajo.html', () => cargarPuestosTrabajo())">
             <span class="material-icons config-icon">work</span>
             <h2 class="config-title">Administrar puestos de trabajo</h2>
             <p class="config-description">Configura y gestiona los diferentes puestos de trabajo.</p>
