22/04/2025 Listado con filtrado y paginado de cuentas bancarias listo
Ya culminé la tarea de filtrar las cuentas bancarias con filtrado y paginado.

--- a/views/configuration-panel/cuentas-bancarias-admin.html
+++ b/views/configuration-panel/cuentas-bancarias-admin.html
@@ -7,31 +7,32 @@
         </button>
     </div>
     <div class="search-bar">
-        <input id="search-bar" type="text" placeholder="Buscar cuentas bancarias..." onkeypress="filterTable(5)">
-        <button onclick="filterTable(5)" class="search-btn">Buscar</button>
+        <input id="search-bar" type="text" placeholder="Buscar cuentas bancarias..." onkeypress="filterTable(9)">
+        <button onclick="filterTable(9)" class="search-btn">Buscar</button>
     </div>
     
     <div class="filters">
-        <select id="selectPageSize" onchange="filterTable(5)">
+        <select id="selectPageSize" onchange="filterTable(9)">
             <option value="5">5 por página</option>
             <option value="10">10 por página</option>
             <option value="25">25 por página</option>
             <option value="50">50 por página</option>
         </select>
-        <select id="estado-filtro" onchange="filterTable(5)">
-            <option value="1">Activa</option>
-            <option value="0">Inactiva</option>
+        <select id="estado-filtro" onchange="filterTable(9)">
+            <option value="2">Todas</option>
+            <option value="1">Activas</option>
+            <option value="0">Inactivas</option>
         </select>
-        <select id="entidad-financiera-filtro" onchange="filterTable(5)">
+        <select id="entidad-financiera-filtro" onchange="filterTable(9)">
             <option value="0">Filtrar por entidad financiera</option>
             <option value="">Crear nueva entidad</option>
         </select>
-        <select id="divisa-filtro" onchange="filterTable(5)">
+        <select id="divisa-filtro" onchange="filterTable(9)">
             <option value="CRC">CRC</option>
             <option value="USD">USD</option>
         </select>
 
-        <button class="close-btn" style="float: right;" onclick="limpiarDivCuentaBancaria()">Cerrar</button>
+        <button class="close-btn" style="float: right;" onclick="adjuntarHTML('/configuration-panel/configuration-panel.html', 0)">Regresar</button>
     </div>
     <table>
         <thead>
