--- a/views/dashboard/dashboard.html
+++ b/views/dashboard/dashboard.html
@@ -48,6 +48,7 @@
     <script src="../../public/js/dashboard-js/salidas.js"></script>
     <script src="../../public/js/dashboard-js/productos.js"></script>
     <script src="../../domain/ModuleSelector.js"></script>
+    <script src="../../public/js/dashboard-js/cuenta-bancaria.js"></script>
 </body>
 
 </html>
