22/04/2025 Se le agrego al filtro de cuentas bancarias de tipo de divisa la opción de que no se filtre por ninguna

--- a/views/configuration-panel/cuentas-bancarias-admin.html
+++ b/views/configuration-panel/cuentas-bancarias-admin.html
@@ -28,6 +28,7 @@
             <option value="">Crear nueva entidad</option>
         </select>
         <select id="divisa-filtro" onchange="filterTable(9)">
+            <option value="nula">Filtrar por tipo de divisa</option>
             <option value="CRC">CRC</option>
             <option value="USD">USD</option>
         </select>
