Ing1234 63 generar una lista de todas las cuentas bancarias que existe registradas en el sistema  (#47)
* 21/04/2025 Listado de cuentas bancarias a nivel del servidor

Ya el listado de cuentas bancarias a nivel del servidor quedo listo, solo queda listarlo a nivel del cliente.

* 22/04/2025 Listado con filtrado y paginado de cuentas bancarias listo

Ya culminé la tarea de filtrar las cuentas bancarias con filtrado y paginado.

* 22/04/2025 Se le agrego al filtro de cuentas bancarias de tipo de divisa la opción de que no se filtre por ninguna

--- a/views/configuration-panel/configuration-panel.html
+++ b/views/configuration-panel/configuration-panel.html
@@ -19,7 +19,7 @@
             <h2 class="config-title">Administrar entidades financieras</h2>
             <p class="config-description">Configura y gestiona las entidades financieras asociadas.</p>
         </div>
-        <div class="config-card">
+        <div class="config-card" onclick="adjuntarHTML('/configuration-panel/cuentas-bancarias-admin.html', () => cargarCuentasTabla())">
             <span class="material-icons config-icon">credit_card</span>
             <h2 class="config-title">Administrar cuentas bancarias</h2>
             <p class="config-description">Gestiona las cuentas bancarias de la empresa.</p>
