25/04/2025 Generar formulario para la creación de cuentas bancarias listo
Solo falta hacerlo funcional pero primero sigue la lista de entidades financieras desplegable.

--- a/views/configuration-panel/entidades-financieras-admin.html
+++ b/views/configuration-panel/entidades-financieras-admin.html
@@ -22,7 +22,7 @@
             <option value="1">Activo</option>
             <option value="0">Inactivo</option>
         </select>
-        <button class="close-btn" style="float: right;" onclick="limpiarDIV()">Cerrar</button>
+        <button class="close-btn" style="float: right;" onclick="adjuntarHTML('/configuration-panel/configuration-panel.html', 0)">Rergresar</button>
     </div>
     <table>
         <thead>
