--- a/views/configuration-panel/productos-admin.html
+++ b/views/configuration-panel/productos-admin.html
@@ -34,7 +34,7 @@
             <i class="material-icons">table_chart</i> Generar Excel
         </button>
 
-        <button class="close-btn" style="float: right;" onclick="limpiarDIV()">Cerrar</button>
+        <button class="close-btn" style="float: right;" onclick="adjuntarHTML('/configuration-panel/configuration-panel.html', 0)">Regresar</button>
     </div>
     <table>
         <thead>
