--- a/views/configuration-panel/puestro-trabajo.html
+++ b/views/configuration-panel/puestro-trabajo.html
@@ -9,13 +9,13 @@
         <input id="search-bar" type="text" placeholder="Buscar puestos..." onkeypress="cargarPuestosTrabajo()">
     </div>
     <div class="filters">
-        <select id="selectPageSize" onchange="cargarPuestosTrabajo()">
+        <select id="selectPageSize" onchange="filterTable(10)">
             <option value="5">5 por página</option>
             <option value="10">10 por página</option>
             <option value="25">25 por página</option>
             <option value="50">50 por página</option>
         </select>
-        <select id="estado-filtro" onchange="cargarPuestosTrabajo()">
+        <select id="estado-filtro" onchange="filterTable(10)">
             <option value="2">Filtrar por estado</option>
             <option value="1">Activo</option>
             <option value="0">Inactivo</option>
