04/05/2025 Edición a nivel de base de datos y actualización del estado lista
Ya de puede editar la información de la cuenta bancaria a nivel de base de datos, además de que se puede actualizar el estado de la cuenta bancaria tanto de activo a inactivo como en viceversa.

--- a/views/configuration-panel/cuentas-bancarias-admin.html
+++ b/views/configuration-panel/cuentas-bancarias-admin.html
@@ -101,6 +101,8 @@
                     </div>
                 </div>
 
+                <input type="hidden" id="idCuentaBancaria" name="idCuentaBancaria">
+
                 <label for="nombre">Nombre del banco:</label>
                 <input type="text" id="nombreBanco" name="nombre">
 
@@ -115,7 +117,7 @@
 
                 <p id="errorMessage" style="color: red;"></p>
 
-                <button type="button" class="close-btn" id="buttonModal">Guardar Cambios</button>
+                <button type="button" class="close-btn" id="buttonModal" onclick="validarYEditarCuentaBancaria()">Guardar Cambios</button>
             </form>
         </div>
     </div>
