06/05/2025 LISTADO DE DEPARTAMENTOS DE TRABAJO
FALTA PAGINACION Y FILTROS

--- a/views/configuration-panel/configuration-panel.html
+++ b/views/configuration-panel/configuration-panel.html
@@ -39,7 +39,7 @@
             <h2 class="config-title">Administrar puestos de trabajo</h2>
             <p class="config-description">Configura y gestiona los diferentes puestos de trabajo.</p>
         </div>
-        <div class="config-card">
+        <div class="config-card"  onclick="adjuntarHTML('/configuration-panel/departamentos.html', () => cargarDepartamentosTabla())">
             <span class="material-icons config-icon">business</span>
             <h2 class="config-title">Administrar departamentos de trabajo</h2>
             <p class="config-description">Organiza y gestiona los departamentos de la empresa.</p>
